# CppJsonSerde

./: CMakeLists.txt  Makefile  README.md  TODO.txt
docs/html/: JsonSerde_8hpp_source.html  annotated.html  classJsonSerde.html  classes.html  files.html  functions_func.html
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js
html_docs/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  graph_legend.html  index.html
html_docs/search/: all_0.js  all_3.js  all_6.js  functions_2.js  searchdata.js
src/: BaseClassVector.hpp  GenericVector.hpp  JsonSerde.cpp  JsonSerde.hpp  JsonSerdeStatics.cpp  JsonSerdeStatics.hpp  Property.cpp  Property.hpp  Type.hpp
src/exceptions/: InvalidJsonException.hpp  InvalidSchemaException.hpp  JsonSerdeException.hpp
test/: base_class_vec_test.cpp  basic_test.cpp  generic_vector_test.cpp  schema_validation_test.cpp  test_type.cpp
